3718 - Geo Translations - UI fixes for Arabic (#3765)
* 3718 - Add flex wrap to options to prevent overflow

* 3718 - Fix Geo Beta version message overlapping

* 3718 - Switch nav geo placement rtl

* 3718 - Add rtl support to the new InputRange

--- a/src/client/components/Inputs/InputRange/InputRange.scss
+++ b/src/client/components/Inputs/InputRange/InputRange.scss
@@ -98,3 +98,17 @@
   text-transform: uppercase;
   white-space: nowrap;
 }
+
+@include rtl {
+  .input-range {
+    /***** Track Styles: Flip the gradient direction for rtl support *****/
+    /***** Chrome, Safari, Opera, and Edge Chromium *****/
+    input[type='range']::-webkit-slider-runnable-track {
+      background-image: linear-gradient(270deg, $ui-accent var(--percentage), white var(--percentage));
+    }
+    /******** Firefox ********/
+    input[type='range']::-moz-range-track {
+      background-image: linear-gradient(270deg, $ui-accent var(--percentage), white var(--percentage));
+    }
+  }
+}
