--- a/src/client/components/Navigation/NavigationDesktop/NavigationDesktop.scss
+++ b/src/client/components/Navigation/NavigationDesktop/NavigationDesktop.scss
@@ -26,3 +26,12 @@
     }
   }
 }
+
+@include rtl {
+  .nav-desktop {
+    &.geoRoute {
+      left: unset;
+      right: 0;
+    }
+  }
+}
